# shutterfly_sites_api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
shutterfly_sites_api/: api.py  utils.py
tests/: api_test.py  utils_test.py
tests/fixtures/: error_page.js  fixture_1.js
